2001-07-25  Sven Wischnowsky  <wischnow@zsh.org>

	* 15485: Completion/Unix/Command/_lzop,
	Completion/Zsh/Type/_directory_stack,
	Completion/Zsh/Type/_file_descriptors, Completion/Zsh/Type/_jobs:
	some more places where list-separator should be used

	* 15484: Completion/AIX/Command/_lscfg,
	Completion/AIX/Type/_logical_volumes,
	Completion/Base/Utility/_describe,
	Completion/Unix/Type/_printers, Completion/Zsh/Command/_zstyle,
	Completion/Zsh/Context/_subscript, Doc/Zsh/compsys.yo,
	Src/Zle/computil.c: another fix for 15477 (separator strings);
	add list-separator style

	* 15482: Doc/Zsh/compwid.yo, Src/Zle/compcore.c,
	Src/Zle/computil.c: fixlet for 15477, don't let it remove
	consecutive dummy matches

	* 15477: Completion/Base/Utility/_describe, Doc/Zsh/compwid.yo,
	Src/Zle/comp.h, Src/Zle/compcore.c, Src/Zle/complete.c,
	Src/Zle/complist.c, Src/Zle/compresult.c, Src/Zle/computil.c:
	make display for groups in _describe nicer; improve packing
	with list_packed; leave space for type character (list_types)
	only in groups with at least one file name

2001-07-24  Sven Wischnowsky  <wischnow@zsh.org>

	* 15470: Src/parse.c: remove nulargs in here strings

2001-07-24  Bart Schaefer  <schaefer@zsh.org>

	* 15472: Doc/Zsh/builtins.yo, Doc/Zsh/grammar.yo: Fix errors
	introduced by 15354.

2001-07-24  Sven Wischnowsky  <wischnow@zsh.org>

	* 15468: Completion/Unix/Command/_ssh: improve user/host
	completion before a @

2001-07-20  Peter Stephenson  <pws@csr.com>

	* 15432: Functions/Zle/bash-transpose-words, Doc/Zsh/contrib.yo:
	new bash-branspose-words widget.

2001-07-20  Sven Wischnowsky  <wischnow@zsh.org>

	* 15433: Src/Zle/computil.c: don't use compsuffix when it might
	be freed; use the right variable in that loop there, dammit

2001-07-19  Sven Wischnowsky  <wischnow@zsh.org>

	* 15415: Completion/Base/Utility/_describe, Src/Zle/computil.c:
	yet another followup to 15407; make _describe filter out
	non-matching strings before calling compdescribe, otherwise